try to fix picture navbar layout on mobile

--- a/theme.css
+++ b/theme.css
@@ -7,6 +7,8 @@ body {
   color: #dbdbdb;
   background-color: #4f4f4f;
 }
+
+
 .navbar-main .navbar-header {
   font-weight: bold;
 }
@@ -15,13 +17,25 @@ body {
   background-color: #2E2E2E;
   border-color: #000;
 }
+.navbar-default .navbar-toggle:focus,
+.navbar-default .navbar-toggle:hover {
+  background-color: #000;
+}
+.navbar-default .navbar-toggle { border-color: #4f4f4f; }
+.navbar-default .navbar-collapse, .navbar-default .navbar-form { border-color: #4f4f4f; }
+
 .navbar-main { background-color: #000; }
+.navbar-main .navbar-toggle:focus,
+.navbar-main .navbar-toggle:hover {
+  background-color: #2E2E2E;
+}
 
 a,
 .navbar-default .navbar-nav>li>a {
   color: #A9A9A9;
 }
 
+a:focus,
 a:hover,
 .navbar-default .navbar-nav>li>a:hover {
    color: #fff;
@@ -48,6 +62,13 @@ a:hover,
 .nav-pills>li.active>a:hover {
     color: #fff;
     background-color: #2e2e2e;
+}
+
+@media (max-width: 460px) {
+  #thePicturePage .navbar-brand {
+    height: 100%;
+    width: 80%;
+  }
 }
 
 .dropdown-menu>.active>a,
